styles.css
body {
    margin: 5vh;
    background-color:rgb(222, 228, 231);
}
.content-container{
    box-shadow: 5px 5px 5px 5px rgb(31, 31, 31);
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    background-color: rgb(221, 221, 221);
}

.header-container {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    
    height: 10vh;
    gap: 10vh;
    padding: 2vh;
    padding-right: 10vh;
    font-size: 20px;
    border-radius: 4px;
}
.logo{
    margin-left: 3vh;
    font-size: 2rem;
    text-shadow: 2px 2px rgb(176, 241, 225);
    cursor: pointer;
}
.logo:hover{
    font-size: 3rem;
}
.divider {
    color: black;
    font-size: 2rem;
}

.about-container {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    height: 40vh;
    font-size: 20px;
    border-radius: 4px;
    
}
.about-me{
    display: flex;
    padding: 5vh;
    align-items: flex-start;
    flex-direction: column;
    max-width:100vh;
    
}
.about-right{
    display: flex;
    align-items: center;
    justify-content: center;
    margin-right: 20%;
    
    flex-direction: column;
    min-width: 20vh;
    padding: 10px;
    background-color: rgb(248, 242, 233);
    box-shadow: 0px 0px 2px 2px black;
    
}
.about-list{
    list-style-type: circle;
}

.projects-title{
    display: flex;
    justify-content: center;
    text-shadow: 1px 1px white;
    margin-bottom: 5%;
    text-decoration: underline;
    font-size: larger;
}
ul{
    list-style-type: none;
}

.project-one{
    min-height: 15vh;
    min-width: 15vh;
    max-width: 30vh;
    max-height: 30vh;
    border-radius: 8px;
    padding: 5vh;
    margin-bottom: 5vh;
    cursor: pointer;
    background-image: url(calc-app-2.png);
    background-position: center;
    background-size: cover;
    
   
}

.project-one-right{
    height: fit-content;
    padding: 20px;
    background-color: rgb(248, 242, 233);
    box-shadow: 0px 0px 2px 2px black;
    min-height: 15vh;
    min-width: 15vh;
    
    
}
.project-one:hover{
    border: 4px solid white;
}

.project-two{
    min-height: 15vh;
    min-width: 15vh;
    max-width: 30vh;
    max-height: 30vh;
    border-radius: 8px;
    padding: 5vh;
    
    margin-bottom: 5vh;
    cursor: pointer;
    background-image: url(rps-2.png);
    background-position: center;
    background-size: cover;
    flex-grow: 2;
    
}
.project-two-right{
    height: fit-content;
    padding: 20px;
    background-color: rgb(248, 242, 233);
    box-shadow: 0px 0px 2px 2px black;
    min-height: 15vh;
    min-width: 15vh;
}

.project-two:hover{
    border: 4px solid white;
}

.project-one-container{
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: 30%;
    padding: 5vh;
}
.project-two-container{
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: 30%;
    padding: 5vh;
    
}


.footer-container {
    display: flex;
    height: 20vh;
    border-top: none;
    border-radius: 4px;
    justify-content: center;
    align-items: center;
}
.github-link {
    font-size: 3rem;
}
a {
    text-decoration: none;
    color:black;
}
a:hover{
    font-size: larger;
}

